Create create action, its tests and documentation for schedule types
