# swagger/v1/swagger.json
@@ -565,6 +565,40 @@
             }
           }
         }
+      },
+      "post": {
+        "summary": "Creates a schedule type",
+        "tags": [
+          "Schedule Types"
+        ],
+        "consumes": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "schedule_type",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string"
+                }
+              },
+              "required": [
+                "name"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          }
+        }
       }
     },
     "/schedule_types/{id}": {
